--- a/package.json
+++ b/package.json
@@ -2,9 +2,14 @@
   "dependencies": {
     "bcrypt": "^3.0.8",
     "body-parser": "^1.19.0",
+    "cookie-parser": "^1.4.4",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^5.9.0"
+    "jsonwebtoken": "^8.5.1",
+    "mongoose": "^5.9.0",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0"
   },
   "devDependencies": {
     "bcrypt": "^3.0.8",
